/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'signing'
}

repositories {
    mavenCentral()
    flatDir {
        dirs "$rootProject.projectDir/ex-lib"
    }
/*
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
*/
}

group = 'com.lwohvye'
version = '4.0.0-beta'
java.sourceCompatibility = JavaVersion.VERSION_19

java {
    withSourcesJar()
}

signing {
    required { !version.endsWith("-SNAPSHOT") && !(System.getenv("CLI_PLATFORM") ?: "").equalsIgnoreCase("GitHub") }
    publishing.publications.configureEach {
        sign it
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += '--enable-preview'
}
